--- a/StylePortfolio/index.html
+++ b/StylePortfolio/index.html
@@ -80,7 +80,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <img class="aboutImg" src="img/mypic.JPG">
+          <img class="aboutImg" src="img/face.jpg">
         </div>
         <div class="col-md-7">
           <h4>My name is Anshu Priya Malviya</h4>
@@ -119,7 +119,7 @@
                   <canvas height="152" width="152"></canvas>
                 </span>
                 <h4>HTML/CSS</h4>
-                <p>Use for Frontend Development</p>
+                <p>Used for Frontend Development</p>
               </div>
 
               <div class="skill">
@@ -128,7 +128,7 @@
                   <canvas height="152" width="152"></canvas>
                 </span>
                 <h4>JS</h4>
-                <p>Use for Frontend Development</p>
+                <p>Used for Frontend Development</p>
               </div>
 
 
@@ -138,7 +138,7 @@
                   <canvas height="152" width="152"></canvas>
                 </span>
                 <h4>C++</h4>
-                <p>My Coding Language</p>
+                <p>My preferred Language</p>
               </div>
 
               <div class="skill">
